apollo-router/tests/integration/snapshots/integration_tests__integration__lifecycle__cli_config_preview.snap
---
source: apollo-router/tests/integration/lifecycle.rs
expression: "command_output(Command::new(IntegrationTest::router_location()).arg(\"config\").arg(\"preview\").env(\"RUST_BACKTRACE\",\n\"\")).await"
snapshot_kind: text
---
Success: true
Exit code: Some(0)
stderr:

stdout:
List of all preview configurations with related GitHub discussions:

	- preview_entity_cache: https://github.com/apollographql/router/discussions/4592
