apollo-router/tests/integration/snapshots/integration_tests__integration__lifecycle__graceful_shutdown.snap
---
source: apollo-router/tests/integration/lifecycle.rs
expression: data
---
{
  "data": {
    "topProducts": [
      {
        "name": "Table"
      },
      {
        "name": "Couch"
      },
      {
        "name": "Chair"
      }
    ]
  }
}
